--- a/main.css
+++ b/main.css
@@ -48,6 +48,10 @@ h4 {
     }
 }
 
+.contact {
+  margin-bottom: 6em;
+}
+
 .websites-line {
     width: 95px;
     border-top: dashed 1px black;
@@ -84,12 +88,6 @@ dd {
   background-color: white;
   max-width: 450px;
   padding: 1em;
-}
-
-button:active {
-  .arrow {
-    display: none;
-  }
 }
 
 img {
